--- a/index.html
+++ b/index.html
@@ -12,32 +12,31 @@
 <body>
   <h1 class="jumbotron">PIG DICE</h1>
   <div class="container gameBoard">
-    <h2><span id = "player-turn"></span></h2>
-//Display: Hold or roll?
-//Current turn total
-//
-  </div>
-  <div class="buttons">
-    <form id = "rollDye">
-      <button type="submit" class="btn btn-success">Roll</button>
-    </form>
-    <form id = "hold">
-      <button type = "submit" class = "btn btn-success">Hold</button>
-    </form>
-  </div>
-  <div class = "scores">
-    <div id = "playerOneScore">
-      <p>Player 1</p>
-      <p>Score This Turn: <span id = "playerOneCurrentScore">0</span></p>
-      <p>Total Game Score: <span id = "playerOneTotalScore">0</span></p>
+    <h2><span id = "player-turn"></span></h2>  
+    <div class="buttons">
+      <form id = "rollDye">
+        <button type="submit" class="btn btn-success">Roll</button>
+      </form>
+      <form id = "hold">
+        <button type = "submit" class = "btn btn-success">Hold</button>
+      </form>
     </div>
-    <div id = "playerTwoScore">
-      <p>Player 2</p>
-      <p>Score This Turn: <span id = "playerTwoCurrentScore">0</span></p>
-      <p>Total Game Score: <span id = "playerTwoTotalScore">0</span></p>
+    <div class = "scores">
+      <div id = "playerOneScore">
+        <p>Player 1</p>
+        <p>Score This Turn: <span id = "playerOneCurrentScore">0</span></p>
+        <p>Total Game Score: <span id = "playerOneTotalScore">0</span></p>
+      </div>
+      <div id = "playerTwoScore">
+        <p>Player 2</p>
+        <p>Score This Turn: <span id = "playerTwoCurrentScore">0</span></p>
+        <p>Total Game Score: <span id = "playerTwoTotalScore">0</span></p>
+      </div>
     </div>
-  </div>
-  
+    <div class = "buttons">
+      <button type = "button" id="startOver" class = "btn btn-primary">Start Over</button>
+    </div>
+</div>
 
 
 </body>
