Add bootstrap styling to html Co-authored-by: Garrett Brown<garrettpaulbrown@gmail.com

--- a/index.html
+++ b/index.html
@@ -21,13 +21,13 @@
         <button type = "submit" class = "btn btn-success">Hold</button>
       </form>
     </div>
-    <div class = "scores">
-      <div id = "playerOneScore">
+    <div class = "scores" class="row">
+      <div id = "playerOneScore" class="column">
         <p>Player 1</p>
         <p>Score This Turn: <span id = "playerOneCurrentScore">0</span></p>
         <p>Total Game Score: <span id = "playerOneTotalScore">0</span></p>
       </div>
-      <div id = "playerTwoScore">
+      <div id = "playerTwoScore" class="column">
         <p>Player 2</p>
         <p>Score This Turn: <span id = "playerTwoCurrentScore">0</span></p>
         <p>Total Game Score: <span id = "playerTwoTotalScore">0</span></p>
