--- a/index.html
+++ b/index.html
@@ -14,10 +14,11 @@
   <div class="container gameBoard">
     <div class="form-group">
       <form id="playerNames">
-        <label for="playerName1">Player<span id="playerName1">Player 1 enter your name</span>s
-        <input id="playerName" type="text" name="name">
-        <label for="playerName2">Player <span id="playerName2">Player 2 enter your name</span>
-        <input id="playerName2" type="text" name="name">
+        <label for="playerName1">Player 1 enter your name</label>
+        <input id="playerName1" type="text" name="name1">
+        <br>
+        <label for="playerName2">Player 2 enter your name</label>
+        <input id="playerName2" type="text" name="name2">
         <button id="startGame" type="submit">Start Game!</button>
       </form>
     </div>
